<resources>
    <string name="app_name">Askify</string>
    <string name="askify">Askify</string>
    <string name="host">Host</string>
    <string name="connect">Connect</string>
    <string name="ip_address">IP Address</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="port">Port</string>
    <string name="post">Post</string>
    <string name="users">users</string>
    <string name="unnamed_user">unnamed user</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="title_question_list">Questions</string>
    <string name="title_question_detail">Question Detail</string>
    <string name="anonymous">anonymous</string>
    <string name="sample_post_text">sample Post Text</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="comments_enabled">Comments Enabled</string>
</resources>
