<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.carleton.COMP2601.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/askify"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/btnHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/host"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="148dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_marginStart="148dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/address"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintLeft_toRightOf="@+id/txtAddr"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_editor_absoluteX="139dp" />

    <EditText
        android:id="@+id/port"
        android:layout_width="216dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHost"
        android:layout_marginEnd="84dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtPort"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.022"
        tools:layout_editor_absoluteX="128dp" />

    <TextView
        android:id="@+id/txtAddr"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="@string/ip_address"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/port"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/txtPort"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:layout_marginStart="65dp"
        android:text="@string/port"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHost"
        tools:layout_editor_absoluteX="65dp" />

</android.support.constraint.ConstraintLayout>
