<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/post_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintLeft_toRightOf="@+id/post_detail_lblTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/post_detail_details"
        android:layout_width="294dp"
        android:layout_height="343dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/post_detail_lblDetails"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_title" />

    <TextView
        android:id="@+id/post_detail_lblTitle"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/post_detail_lblDetails"
        android:layout_width="53dp"
        android:layout_height="42dp"
        android:layout_marginTop="13dp"
        android:text="@string/details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_lblTitle"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/post_detail_hasComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_enabled"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_anon" />

    <CheckBox
        android:id="@+id/post_detail_anon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anonymous"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_details" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/post_detail_upload"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_details"
        app:srcCompat="@android:drawable/ic_menu_upload"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="@+id/post_detail_details" />

</android.support.constraint.ConstraintLayout>